z-index fixes for header and modals

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2793,6 +2793,7 @@ input[type="button"].button--block {
     color: #e91c53; }
 
 .add-modal-overlay {
+  z-index: 40;
   position: fixed;
   top: 0;
   left: 0;
@@ -3039,7 +3040,7 @@ input[type="button"].button--block {
   background-color: #fff;
   padding: 0 1.38889%;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  z-index: 40; }
+  z-index: 20; }
 
 .header__title {
   line-height: 72px;
