--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -13,7 +13,7 @@ $_sidebar-height: 72px;
   background-color: $_bg-color;
   padding: 0 $gutter;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  @include z-index(modal);
+  @include z-index(header);
 }
 
 .header__title {
